# OpenProject

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  configure  mod1  opt  tree
docs/: index.html
src/: CMakeLists.txt  fragment.glsl  main.cpp  vertex.glsl
src/colors/: CMakeLists.txt  colors.cpp  colors.cpp.m4  colors.h  colors.h.m4  colors.m4
src/demo/: CMakeLists.txt  demo.cpp  helloworld.cpp  mod1.cpp  opt.cpp
src/demo/inc/: demo.h
src/demo/src/: demo.cpp
src/gl/: CMakeLists.txt
src/gl/inc/: gl.h
src/gl/src/: camera.cpp  gl.cpp  shader.cpp  window.cpp
src/loaders/: CMakeLists.txt
src/loaders/inc/: Iloader.h  mod1.h
src/loaders/src/: mod1.cpp
src/m4_test/: CMakeLists.txt  test.m4  test.m4.cpp
